test/expected/declare_epf.out
declare f as explicit function
        ^
9: error: function can not be "explicit"
